fixed scrollbar

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -16,3 +16,11 @@
   background-size: 400% 400%;
   animation: gradientAnimation 15s ease infinite;
 }
+html,
+html {
+  scrollbar-width: none;
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
